--- a/projekti.html
+++ b/projekti.html
@@ -101,7 +101,7 @@
     </tr>
     <tr align="center">
         <td>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque labore impedit illo quia ipsa. Laborum reprehenderit suscipit officia culpa, quis neque modi provident nihil voluptas dignissimos adipisci, veritatis alias non.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam deserunt explicabo nisi facilis quidem aliquid totam deleniti excepturi fugit animi.</p>
         </td>
     </tr>
 </table>
