--- a/projekti-html.html
+++ b/projekti-html.html
@@ -101,7 +101,7 @@
     </tr>
     <tr align="center">
         <td>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam deserunt explicabo nisi facilis quidem aliquid totam deleniti excepturi fugit animi.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam temporibus porro quidem rerum natus adipisci voluptates magnam quos qui minima voluptas debitis sit excepturi quia illum, perferendis earum facilis. Veniam..</p>
         </td>
     </tr>
 </table>
